tests/baselines/reference/parserModuleDeclaration13.errors.txt
parserModuleDeclaration13.ts(4,6): error TS1142: Line break not permitted here.


==== parserModuleDeclaration13.ts (1 errors) ====
    // https://github.com/microsoft/TypeScript/issues/11167
    
    declare module 
         my.very.long.name.foo.bar.baz.able.baker {}
         ~~
!!! error TS1142: Line break not permitted here.